tests/golden/with_squid_proxy/with_squid_proxy/icap-virusscan/01_clamavConfigMap.yaml
apiVersion: v1
data: {}
kind: ConfigMap
metadata:
  labels:
    app: clamav-icap
  name: clamav
  namespace: syn-icap-virusscan
