tests/golden/with_squid_proxy/with_squid_proxy/icap-virusscan/03_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    add-annotation: from_with_squid_proxy
  labels:
    add-label: from_with_squid_proxy
    app: clamav-icap
    instance: with_squid_proxy
  name: clamav-icap
  namespace: syn-icap-virusscan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clamav-icap
      instance: with_squid_proxy
  template:
    metadata:
      annotations:
        add-annotation: from_with_squid_proxy
      labels:
        add-label: from_with_squid_proxy
        app: clamav-icap
        instance: with_squid_proxy
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: clamav-icap
                    instance: with_squid_proxy
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - envFrom:
            - configMapRef:
                name: clamav
          image: ghcr.io/bacluc/clamav:latest
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 5
            tcpSocket:
              port: 3310
            timeoutSeconds: 5
          name: clamav
          ports:
            - containerPort: 3310
              name: clamav
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3310
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 2000m
              memory: 4072Mi
            requests:
              cpu: 120m
              memory: 1280Mi
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 3310
            timeoutSeconds: 5
        - envFrom:
            - configMapRef:
                name: c-icap
          image: ghcr.io/bacluc/c-icap:latest
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 5
            tcpSocket:
              port: 1344
            timeoutSeconds: 5
          name: c-icap
          ports:
            - containerPort: 1344
              name: icap
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 1344
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 1344
            timeoutSeconds: 5
