tests/golden/with_squid_proxy/with_squid_proxy/icap-virusscan/06_networkPolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: clamav-icap
    instance: with_squid_proxy
  name: allow-connection-to-cicap
  namespace: syn-icap-virusscan
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vshn-airlock-dev-01
        - namespaceSelector:
            matchExpressions:
              - key: env
                operator: In
                values:
                  - prod
      ports:
        - port: 1344
          protocol: TCP
  podSelector:
    matchLabels:
      app: clamav-icap
      instance: with_squid_proxy
  policyTypes:
    - Ingress
