tests/golden/with_squid_proxy/with_squid_proxy/icap-virusscan/99_debug.yaml
apiVersion: v1
data:
  debug: |
    _metadata:
      multi_instance: true
      multi_tenant: true
    createNamespace: true
    debug: true
    deployments:
      clamav-icap:
        container_cicap:
          image: "ghcr.io/bacluc/c-icap:latest"
          resources:
            limits:
              cpu: "500m"
              memory: "500Mi"
            requests:
              cpu: "100m"
              memory: "200Mi"
        container_clamav:
          image: "ghcr.io/bacluc/clamav:latest"
          resources:
            limits:
              cpu: "2000m"
              memory: "4072Mi"
            requests:
              cpu: "120m"
              memory: "1280Mi"
        metadata:
          annotations:
            add-annotation: "from_with_squid_proxy"
          labels:
            add-label: "from_with_squid_proxy"
        spec:
          template:
            metadata:
              annotations:
                add-annotation: "from_with_squid_proxy"
              labels:
                add-label: "from_with_squid_proxy"
            spec: {}
      squid:
        container_squid:
          image: "ghcr.io/bacluc/squid:latest"
          resources:
            limits:
              memory: "400Mi"
            requests:
              cpu: "100m"
              memory: "210Mi"
        metadata:
          annotations:
            add-annotation: "from_with_squid_proxy"
          labels:
            add-label: "from_with_squid_proxy"
        spec:
          template:
            metadata:
              annotations:
                add-annotation: "from_with_squid_proxy"
              labels:
                add-label: "from_with_squid_proxy"
            spec: {}
    enable_squid: true
    env:
      c-icap:
        CLAMD_IP: "127.0.0.1"
        CLAMD_MAXSIZE: "50m"
      clamav: {}
    namespace: "syn-icap-virusscan"
    namespaceAnnotations: {}
    namespaceLabels: {}
    replicas: 2
    squid_domain: "test-icap-virusscan.apps.c-hin-test-rma1.hin-infra.ch"
kind: ConfigMap
metadata:
  name: debug-configmap
  namespace: syn-icap-virusscan
